fix: update Java version to 17 and correct list access in OpenAIClient